[gd_scene load_steps=8 format=2]

[ext_resource path="res://babosos/Space_baboso_laser.gd" type="Script" id=1]
[ext_resource path="res://gfx/Space_baboso_basic.png" type="Texture" id=2]
[ext_resource path="res://sounds/Baboso_laser_sound.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/Baboso_basic_hurt.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=2]
resource_name = "death"
length = 0.3
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 8, 6 )

[node name="Space_baboso_laser" type="Area2D" groups=[
"total_babosos",
]]
position = Vector2( 80, 48 )
collision_layer = 2
collision_mask = 5
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
z_as_relative = false
texture = ExtResource( 2 )
vframes = 4
hframes = 6
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 1 )
anims/death = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="BabosoShooting" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
vframes = 4
hframes = 6
frame = 11

[node name="HurtSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -4.039

[node name="ShootSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2( -80, -48 )
stream = ExtResource( 3 )
[connection signal="area_shape_entered" from="." to="." method="_on_Baboso_get_hit_by_Player_laser"]
